--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "dependencies": {
     "cassandra-driver": "^3.5.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^1.18.2"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+	"start": "nodemon"
   },
   "repository": {
     "type": "git",
