--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "Rutgers Course Planner++",
   "main": "index.js",
   "dependencies": {
-    "cassandra-driver": "^3.5.0"
+    "body-parser": "^1.18.3",
+    "cassandra-driver": "^3.5.0",
+    "express": "^4.16.3"
   },
   "devDependencies": {
     "nodemon": "^1.18.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-	"start": "nodemon"
+    "start": "nodemon"
   },
   "repository": {
     "type": "git",
