--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
-    "cassandra-driver": "^3.5.0",
-    "connect-session-sequelize": "^5.2.2",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
-    "express-validator": "^5.2.0"
+    "express-validator": "^5.2.0",
+    "knex": "^0.15.1",
+    "objection": "^1.2.0",
+    "pg": "^7.4.3"
   },
   "devDependencies": {
     "nodemon": "^1.18.2"
