split up views and backend servers and starting work on login controllers

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "start2": "nodemon views.js"
   },
   "repository": {
     "type": "git",
