--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
-    "express-validator": "^5.3.0",
     "knex": "^0.15.2",
     "objection": "^1.2.2",
-    "pg": "^7.4.3"
+    "pg": "^7.4.3",
+    "validator": "^10.4.0"
   },
   "devDependencies": {
     "morgan": "^1.9.0",
