--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "knex": "^0.15.2",
+    "node-cron": "^1.2.1",
     "objection": "^1.2.2",
     "pg": "^7.4.3",
     "validator": "^10.4.0"
