--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-fileupload": "^0.4.0",
     "express-session": "^1.15.6",
     "knex": "^0.15.2",
+    "moment": "^2.22.2",
     "node-cron": "^1.2.1",
     "objection": "^1.2.2",
     "pdfjs-dist": "^2.0.489",
