--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "objection": "^1.2.2",
     "pdfjs-dist": "^2.0.489",
     "pg": "^7.4.3",
+    "serve-favicon": "^2.5.0",
     "validator": "^10.5.0"
   },
   "devDependencies": {
