--- a/package.json
+++ b/package.json
@@ -21,16 +21,16 @@
     "performance-now": "^2.1.0",
     "pg": "^7.4.3",
     "serve-favicon": "^2.5.0",
-    "validator": "^10.5.0"
-  },
-  "devDependencies": {
-    "dumper.js": "^0.1.1",
+    "validator": "^10.5.0",
     "morgan": "^1.9.0",
     "nodemon": "^1.18.3"
   },
+  "devDependencies": {
+    "dumper.js": "^0.1.1",
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
