--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "nodemon": "^1.18.3"
   },
   "devDependencies": {
-    "dumper.js": "^0.1.1",
+    "dumper.js": "^0.1.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
