--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "serve-favicon": "^2.5.0",
     "validator": "^10.5.0",
     "morgan": "^1.9.0",
-    "nodemon": "^1.18.3"
+    "nodemon": "^1.18.3",
+    "dumper.js": "^0.1.1"
   },
   "devDependencies": {
-    "dumper.js": "^0.1.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
