--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   },
   "devDependencies": {
     "dumper.js": "^0.1.1",
-    "morgan": "^1.9.0",
+    "eslint": "^5.16.0",
+    "morgan": "^1.9.1",
     "nodemon": "^1.18.3"
   },
   "scripts": {
